<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/coffee"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view" >

    </android.support.design.widget.NavigationView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="344dp"
        android:layout_height="495dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="@drawable/background"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Koffee with Cooder"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="344dp"
                android:layout_height="167dp"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                app:layout_constraintVertical_bias="0.68"
                app:srcCompat="@drawable/cappuccino" />


            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee1"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    android:visibility="visible"
                    app:fontFamily="serif" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee11"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    android:visibility="gone"
                    app:fontFamily="serif" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="9dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="subtractCoffee"
                    android:text="@string/Subtract" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addCoffeee"
                    android:text="@string/Add" />


            </LinearLayout>


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="344dp"
                android:layout_height="167dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                app:layout_constraintVertical_bias="0.371"
                app:srcCompat="@drawable/espresso" />

        <LinearLayout
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:text="@string/coffee2"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffee22"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="gone"
                app:fontFamily="serif" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="9dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="subtractCoffee"
                    android:text="@string/Subtract" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addCoffeee"
                    android:text="@string/Add" />


            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="347dp"
                android:layout_height="157dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                app:layout_constraintVertical_bias="0.972"
                app:srcCompat="@drawable/icecoffee" />


        <LinearLayout
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView111"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:text="@string/coffee3"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffee33"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="gone"
                app:fontFamily="serif" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="9dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="subtractCoffee"
                    android:text="@string/Subtract" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value" />

                <Button
                    android:id="@+id/button33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addCoffeee"
                    android:text="@string/Add" />


            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="347dp"
                android:layout_height="153dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                app:layout_constraintVertical_bias="0.972"
                app:srcCompat="@drawable/irishcoffee" />


        <LinearLayout
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:text="@string/coffee4"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffee44"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="gone"
                app:fontFamily="serif" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="9dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="subtractCoffee"
                    android:text="@string/Subtract" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value" />

                <Button
                    android:id="@+id/button44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addCoffeee"
                    android:text="@string/Add" />


            </LinearLayout>


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="347dp"
                android:layout_height="153dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                app:layout_constraintVertical_bias="0.972"
                app:srcCompat="@drawable/latte" />



        <LinearLayout
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView13"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:text="@string/coffee5"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffee55"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="gone"
                app:fontFamily="serif" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="9dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="subtractCoffee"
                    android:text="@string/Subtract" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value" />

                <Button
                    android:id="@+id/button55"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addCoffeee"
                    android:text="@string/Add" />

            </LinearLayout>

            <Button
                android:id="@+id/button555"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="orderCoffee"
                android:text="@string/Order" />

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>